2003-03-27  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* scripts/ly2dvi.py (run_dvips): +add the .map file 

2003-03-24  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* input/screech-boink.ly: new file.

2003-03-22  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* scripts/lilypond-book.py (make_lilypond_file): convert
	lilypond-file to lilypond block directly, without going through
	begin/end lilypond text.
	

2003-03-21  Juergen Reuter  <reuter@ipd.uka.de>

	* lily/breathing-sign.cc, lily/include/breathing-sign.hh,
	scm/grob-description.scm: moved Michael's original breathing sign
	code in brew_molecule() to divisio_minima(); provided new
	brew_molecule() that effectively replaces the
	Text_item::brew_molecule callback (with additional fallback to
	Michael's original code); added callbacks for brewing divisio
	maior/maxima and finalis

	* gregorian-init.ly: added breathing sign shortcuts for virgula,
	caesura, divisiominima, divisiomaior, divisiomaxima, and finalis

	* script-init.ly: added shortfermata, longfermata,
	verylongfermata, varcoda

	* scm/script.scm, mf/feta-schrift.mf: added shortfermata,
	longfermata, verylongfermata, varcomma, varcoda

2003-03-19  Mats Bengtsson  <mats.bengtsson@s3.kth.se>

	* Documentation/user/{tutorial.itely,refman.itely,internals.itely}: 
	  Remove all noquote and insert a few quote.
	
	* Documentation/user/lilypond-book.itely (Music fragment options),
	  scripts/lilypond-book.py: Don't include quotation blocks by
	  default. Introduce option quote instead of noquote

2003-03-17  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* VERSION: 1.7.15 released
	
	* Documentation/user/lilypond.tely: omf updates.

	* buildscripts/texi2omf.py (omf_vars): include version.date

	* make/lilypond.redhat.spec.in: fixes for spec file. 

	* stepmake/stepmake/texinfo-vars.make (GENERATE_OMF):  replace var
	by function definition: lily now requires a recent GNU Make.

	* scripts/lilypond-book.py (write_deps): remove .tex dependency writing.
